--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
         <div class="card-two">
           <img src="images/icon-suvs.svg" />
-          <h1>SEDANS</h1>
+          <h1>SUVS</h1>
           <p>
-            Choose a sedan for its affordability and excellent fuel economy.
-            Ideal for cruising in the city or on your next road trip.
+            take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
           </p>
           <div>
             <button>Learn More</button>
@@ -60,10 +60,10 @@
         </div>
         <div class="card-three">
           <img src="images/icon-luxury.svg" />
-          <h1>SEDANS</h1>
+          <h1>LUXURY</h1>
           <p>
-            Choose a sedan for its affordability and excellent fuel economy.
-            Ideal for cruising in the city or on your next road trip.
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhance comfort of a luxury rental and arrive in style.
           </p>
           <div>
             <button>Learn More</button>
